--- a/trunk/stratagem_01/strategem_01.csproj
+++ b/trunk/stratagem_01/strategem_01.csproj
@@ -37,6 +37,10 @@
     <StartupObject>Strategem.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Engine_01, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Engine_01\bin\Debug\Engine_01.dll</HintPath>
+    </Reference>
     <Reference Include="GameLib_01">
       <HintPath>..\..\GameWorks\GameLib_01\bin\x86\Debug\GameLib_01.dll</HintPath>
     </Reference>
@@ -91,12 +95,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\GameWorks\Engine_01\Engine_01.csproj">
-      <Project>{DF5113DF-84FB-41DC-B105-0B6B8017569C}</Project>
-      <Name>Engine_01</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
