Viewport was commented out to show it wasn't a problem. Handle was changed to the Active Form's handle to move the XNA GameWin to show it was the problem. The mouse no longer changes label1 to show time and grid co-ord.

--- a/stratagem_01/strategem_01.csproj
+++ b/stratagem_01/strategem_01.csproj
@@ -55,7 +55,9 @@
     <Compile Include="Runtime\Grid.cs" />
     <Compile Include="Runtime\Board.cs" />
     <Compile Include="Runtime\RandomGenerator.cs" />
-    <Compile Include="Form\Canvas.cs" />
+    <Compile Include="Form\Canvas.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form\frmGameWindow.cs">
       <SubType>Form</SubType>
     </Compile>
