--- a/trunk/stratagem_01/strategem_01.csproj
+++ b/trunk/stratagem_01/strategem_01.csproj
@@ -40,6 +40,7 @@
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -55,18 +56,18 @@
     <Compile Include="Runtime\Grid.cs" />
     <Compile Include="Runtime\Board.cs" />
     <Compile Include="Runtime\RandomGenerator.cs" />
-    <Compile Include="Form\Canvas.cs">
+    <Compile Include="Forms\Canvas.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Form\frmGameWindow.cs">
+    <Compile Include="Forms\frmGameWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\frmGameWindow.Designer.cs">
+    <Compile Include="Forms\frmGameWindow.Designer.cs">
       <DependentUpon>frmGameWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form\frmGameWindow.resx">
+    <EmbeddedResource Include="Forms\frmGameWindow.resx">
       <DependentUpon>frmGameWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -79,6 +80,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
