--- a/trunk/stratagem_01/App.config
+++ b/trunk/stratagem_01/App.config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
     <add key="_boardStats" value="\BoardStats.csv"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
