--- a/GameLib_01/GameLib_01.csproj
+++ b/GameLib_01/GameLib_01.csproj
@@ -107,9 +107,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ContentPipeline\ContentPipeline.csproj">
-      <Project>{88F33B34-6B78-40E7-B899-9B6C34B7782A}</Project>
-      <Name>ContentPipeline</Name>
+    <ProjectReference Include="..\Content\Content.contentproj">
+      <Project>{74B98420-4953-45E2-A584-BA8B6146076F}</Project>
+      <Name>Content</Name>
+      <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
     <ProjectReference Include="..\Engine_01\Engine_01.csproj">
       <Project>{DF5113DF-84FB-41DC-B105-0B6B8017569C}</Project>
