--- a/GameLib_01/GameLib_01.csproj
+++ b/GameLib_01/GameLib_01.csproj
@@ -106,7 +106,6 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="GraphicsDeviceService.cs" />
-    <Compile Include="Interfaces\IGraphicsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +118,9 @@
       <Project>{DF5113DF-84FB-41DC-B105-0B6B8017569C}</Project>
       <Name>Engine_01</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
