1-24-11:SC:Image rendering is complete and called from Canvas.

--- a/stratagem_01/strategem_01.csproj
+++ b/stratagem_01/strategem_01.csproj
@@ -90,6 +90,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="bin\Debug\Content\Images\stars.xnb" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
