--- a/stratagem_01/App.config
+++ b/stratagem_01/App.config
@@ -6,11 +6,11 @@
     
     <!-- THIS WAS TEDIOUS!!! -->
     <!-- Player area cell assignments -->
-    <add key="_players[]" value="_playerArea1|_playerArea2|_playerArea3|_playerArea4"/>
+    <add key="_players[]" value="playerArea1|playerArea2|playerArea3|playerArea4"/>
     <add key="_playerCredits" value="1000.00"/>
-    <add key="_playerArea1" value="Player1:0|1|2|3|9|10|11|12"/>
-    <add key="_playerArea2" value="Player2:5|6|7|8|14|15|16|17"/>
-    <add key="_playerArea3" value="Player3:27|28|29|30|36|37|38|39"/>
-    <add key="_playerArea4" value="Player4:32|33|34|35|41|42|43|44"/>
+    <add key="playerArea1" value="Player1:0|1|2|3|9|10|11|12"/>
+    <add key="playerArea2" value="Player2:5|6|7|8|14|15|16|17"/>
+    <add key="playerArea3" value="Player3:27|28|29|30|36|37|38|39"/>
+    <add key="playerArea4" value="Player4:32|33|34|35|41|42|43|44"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
